[dyad] Restauradas seções críticas (Institucional, Segurança, Upgrade e Formulário de Lead) para igualar o site ao vivo. - wrote 2 file(s)

--- a/es.html
+++ b/es.html
@@ -124,7 +124,21 @@
       </div>
     </section>
 
-    <section class="urgency-banner section-padding" style="background: linear-gradient(rgba(22, 62, 99, 0.95), rgba(22, 62, 99, 0.95)), url('images/hero-split.png') center/cover fixed;">
+    <section class="section-padding bg-white" id="produto">
+      <div class="container">
+        <div class="text-center mb-60">
+          <h2 class="section-title">Estructura Institucional</h2>
+        </div>
+        <div class="institutional-grid">
+          <div class="inst-item"><i data-lucide="shield-check" class="inst-icon"></i><h4>Compliance Europeo</h4></div>
+          <div class="inst-item"><i data-lucide="file-text" class="inst-icon"></i><h4>Contratos Digitales</h4></div>
+          <div class="inst-item"><i data-lucide="landmark" class="inst-icon"></i><h4>Jurisdicción Local</h4></div>
+          <div class="inst-item"><i data-lucide="lock" class="inst-icon"></i><h4>Protección de Datos</h4></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="urgency-banner section-padding" style="background: linear-gradient(rgba(22, 62, 99, 0.95), rgba(22, 62, 99, 0.95)), url('/images/hero-split.png') center/cover fixed;">
       <div class="container text-center text-white">
         <div class="status-badge-premium mb-32">
           <span class="status-dot-pulse"></span> INSCRIPCIONES ABIERTAS PARA EL GRUPO
@@ -163,6 +177,22 @@
         <a href="./funil-conversao-es.html" class="btn btn--primary btn--lg mb-24">
           Reservar Mi Posición <i data-lucide="arrow-right" class="ml-8"></i>
         </a>
+      </div>
+    </section>
+
+    <!-- SECCIÓN GARANTÍA DE UPGRADE (Restaurada) -->
+    <section class="section-padding bg-white" id="upgrade">
+      <div class="container">
+        <div class="upgrade-info">
+          <div class="badge-upgrade-inline">Diferencial Exclusivo</div>
+          <div class="upgrade-text-wrap">
+            <i data-lucide="zap" class="upgrade-icon"></i>
+            <div>
+              <h3 class="duration-title mb-16" style="font-size: 1.5rem;">Garantía de Upgrade</h3>
+              <p>Al finalizar su plan de 24 meses, tiene prioridad absoluta para migrar al próximo modelo de iPhone sin burocracia, manteniendo su posición en la lista de entregas de WEKOTA.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -215,6 +245,23 @@
       </div>
     </section>
 
+    <!-- SECCIÓN SEGURIDAD & JURISDICCIÓN (Restaurada) -->
+    <section class="section-padding bg-navy">
+      <div class="container">
+        <div class="safety-grid">
+          <div class="text-center mb-60">
+            <h2 class="section-title text-white">Su seguridad primero</h2>
+            <p class="section-desc text-white-60 mx-auto">Operamos bajo las más estrictas normas de protección al consumidor y transparencia contractual en Europa.</p>
+          </div>
+          <div class="safety-bullets">
+            <div class="safety-item"><i data-lucide="shield" class="safety-icon"></i><div><h4>Contratos Registrados</h4><p>Cada adhesión se formaliza con un contrato jurídicamente vinculante.</p></div></div>
+            <div class="safety-item"><i data-lucide="globe" class="safety-icon"></i><div><h4>Jurisdicción Europea</h4><p>Toda la operación se rige por las leyes comerciales de la Unión Europea.</p></div></div>
+            <div class="safety-item"><i data-lucide="check-circle" class="safety-icon"></i><div><h4>Transparencia de Orden</h4><p>El orden de entrega es auditable y sigue estrictamente el contrato.</p></div></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- SECCIÓN DE MÉTRICAS & PRUEBA SOCIAL (Restaurada) -->
     <section class="section-padding bg-white">
       <div class="container">
@@ -240,6 +287,22 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FORMULARIO DE LEAD FINAL (Restaurado) -->
+    <section class="section-padding bg-white" id="cta-final">
+      <div class="container text-center">
+        <span class="escasset-badge">ÚLTIMAS POSICIONES DISPONIBLES</span>
+        <h2 class="section-title mb-48">¿Listo para asegurar su <br><span class="text-teal">iPhone 17 Pro Max?</span></h2>
+        <div class="form-card-premium">
+          <form class="form-grid">
+            <input type="text" placeholder="Su Nombre" class="form-input">
+            <input type="email" placeholder="Su E-mail" class="form-input">
+            <button type="submit" class="btn btn--primary">Quiero Participar</button>
+          </form>
+          <p class="counter-discreet"><i data-lucide="users" class="icon-sm"></i> 152 personas se unieron a la lista esta semana</p>
         </div>
       </div>
     </section>
