--- a/index.html
+++ b/index.html
@@ -108,6 +108,19 @@
         </div>
       </section>
 
+      <!-- SEÇÃO INSTITUCIONAL (Restaurada) -->
+      <section class="section-padding bg-light">
+        <div class="container">
+          <div class="text-center mb-60"><h2 class="section-title">Estrutura Institucional</h2></div>
+          <div class="institutional-grid">
+            <div class="inst-item"><i data-lucide="shield-check" class="inst-icon"></i><h4>Compliance Europeu</h4></div>
+            <div class="inst-item"><i data-lucide="file-text" class="inst-icon"></i><h4>Contratos Digitais</h4></div>
+            <div class="inst-item"><i data-lucide="landmark" class="inst-icon"></i><h4>Jurisdição Local</h4></div>
+            <div class="inst-item"><i data-lucide="lock" class="inst-icon"></i><h4>Proteção de Dados</h4></div>
+          </div>
+        </div>
+      </section>
+
       <section class="urgency-banner section-padding" style="background: linear-gradient(rgba(22, 62, 99, 0.95), rgba(22, 62, 99, 0.95)), url('/images/hero-split.png') center/cover fixed;">
         <div class="container text-center text-white">
           <div class="status-badge-premium mb-32"><span class="status-dot-pulse"></span> INSCRIÇÕES ABERTAS PARA O GRUPO</div>
@@ -130,6 +143,22 @@
             </div>
           </div>
           <a href="funil-conversao.html" class="btn btn--primary btn--lg mb-24">Reservar Minha Posição <i data-lucide="arrow-right" class="ml-8"></i></a>
+        </div>
+      </section>
+
+      <!-- SEÇÃO GARANTIA DE UPGRADE (Restaurada) -->
+      <section class="section-padding bg-white" id="upgrade">
+        <div class="container">
+          <div class="upgrade-info">
+            <div class="badge-upgrade-inline">Diferencial Exclusivo</div>
+            <div class="upgrade-text-wrap">
+              <i data-lucide="zap" class="upgrade-icon"></i>
+              <div>
+                <h3 class="duration-title mb-16" style="font-size: 1.5rem;">Garantia de Upgrade</h3>
+                <p>Ao finalizar seu plano de 24 meses, você tem prioridade absoluta para migrar para o próximo modelo de iPhone sem burocracia, mantendo sua posição na lista de entregas da WEKOTA.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -164,6 +193,23 @@
         </div>
       </section>
 
+      <!-- SEÇÃO SEGURANÇA & JURISDIÇÃO (Restaurada) -->
+      <section class="section-padding bg-navy">
+        <div class="container">
+          <div class="safety-grid">
+            <div class="text-center mb-60">
+              <h2 class="section-title text-white">Sua segurança em primeiro lugar</h2>
+              <p class="section-desc text-white-60 mx-auto">Operamos dentro das mais rigorosas normas de proteção ao consumidor e transparência contratual na Europa.</p>
+            </div>
+            <div class="safety-bullets">
+              <div class="safety-item"><i data-lucide="shield" class="safety-icon"></i><div><h4>Contratos Registados</h4><p>Cada adesão é formalizada com um contrato juridicamente vinculativo.</p></div></div>
+              <div class="safety-item"><i data-lucide="globe" class="safety-icon"></i><div><h4>Jurisdição Europeia</h4><p>Toda a operação é regida pelas leis comerciais da União Europeia.</p></div></div>
+              <div class="safety-item"><i data-lucide="check-circle" class="safety-icon"></i><div><h4>Transparência de Ordem</h4><p>A ordem de entrega é auditável e segue estritamente o contrato.</p></div></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- SEÇÃO DE MÉTRICAS & PROVA SOCIAL (Restaurada) -->
       <section class="section-padding bg-white">
         <div class="container">
@@ -189,6 +235,22 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- FORMULÁRIO DE LEAD FINAL (Restaurado) -->
+      <section class="section-padding bg-white" id="cta-final">
+        <div class="container text-center">
+          <span class="escasset-badge">ÚLTIMAS POSIÇÕES DISPONÍVEIS</span>
+          <h2 class="section-title mb-48">Pronto para garantir seu <br><span class="text-teal">iPhone 17 Pro Max?</span></h2>
+          <div class="form-card-premium">
+            <form class="form-grid">
+              <input type="text" placeholder="Seu Nome" class="form-input">
+              <input type="email" placeholder="Seu E-mail" class="form-input">
+              <button type="submit" class="btn btn--primary">Quero Participar</button>
+            </form>
+            <p class="counter-discreet"><i data-lucide="users" class="icon-sm"></i> 152 pessoas entraram na lista esta semana</p>
           </div>
         </div>
       </section>
