--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header class="header">
       <div class="container header__inner">
         <a href="/" class="logo">
-          <img src="/images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official">
+          <img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official">
         </a>
         <div class="header__right">
           <div class="lang-selector">
@@ -54,7 +54,7 @@
             <a href="funil-conversao.html" class="btn btn--primary btn--lg">Quero minha posição</a>
           </div>
           <div class="hero__visual">
-            <img src="/images/hero-split.png" alt="iPhone 17 Pro Max" class="hero__img">
+            <img src="images/hero-split.png" alt="iPhone 17 Pro Max" class="hero__img">
           </div>
         </div>
       </section>
@@ -94,11 +94,11 @@
           <div class="text-center mb-60"><h2 class="section-title">iPhone 17 Pro Max 256GB — <span class="text-teal">Todas as Cores</span></h2></div>
           <div class="product-carousel-wrapper">
             <div class="product-carousel-track">
-              <div class="product-slide"><img src="/images/product-orange.png" alt="iPhone 17 Pro Max" class="product-img-premium"></div>
-              <div class="product-slide"><img src="/images/product-info.jpg" alt="iPhone 17 Pro Max Info" class="product-img-premium"></div>
-              <div class="product-slide"><img src="/images/product-cable.png" alt="iPhone 17 Pro Max Cable" class="product-img-premium"></div>
-              <div class="product-slide"><img src="/images/hero-split.png" alt="iPhone 17 Pro Max Detalhe" class="product-img-premium"></div>
-              <div class="product-slide"><img src="/images/lineup.png" alt="iPhone 17 Pro Max Lineup" class="product-img-premium"></div>
+              <div class="product-slide"><img src="images/product-orange.png" alt="iPhone 17 Pro Max" class="product-img-premium"></div>
+              <div class="product-slide"><img src="images/product-info.jpg" alt="iPhone 17 Pro Max Info" class="product-img-premium"></div>
+              <div class="product-slide"><img src="images/product-cable.png" alt="iPhone 17 Pro Max Cable" class="product-img-premium"></div>
+              <div class="product-slide"><img src="images/hero-split.png" alt="iPhone 17 Pro Max Detalhe" class="product-img-premium"></div>
+              <div class="product-slide"><img src="images/lineup.png" alt="iPhone 17 Pro Max Lineup" class="product-img-premium"></div>
             </div>
             <div class="carousel-nav">
               <button class="nav-btn prev"><i data-lucide="chevron-left"></i></button>
@@ -108,20 +108,7 @@
         </div>
       </section>
 
-      <!-- SEÇÃO INSTITUCIONAL (Restaurada) -->
-      <section class="section-padding bg-light">
-        <div class="container">
-          <div class="text-center mb-60"><h2 class="section-title">Estrutura Institucional</h2></div>
-          <div class="institutional-grid">
-            <div class="inst-item"><i data-lucide="shield-check" class="inst-icon"></i><h4>Compliance Europeu</h4></div>
-            <div class="inst-item"><i data-lucide="file-text" class="inst-icon"></i><h4>Contratos Digitais</h4></div>
-            <div class="inst-item"><i data-lucide="landmark" class="inst-icon"></i><h4>Jurisdição Local</h4></div>
-            <div class="inst-item"><i data-lucide="lock" class="inst-icon"></i><h4>Proteção de Dados</h4></div>
-          </div>
-        </div>
-      </section>
-
-      <section class="urgency-banner section-padding" style="background: linear-gradient(rgba(22, 62, 99, 0.95), rgba(22, 62, 99, 0.95)), url('/images/hero-split.png') center/cover fixed;">
+      <section class="urgency-banner section-padding" style="background: linear-gradient(rgba(22, 62, 99, 0.95), rgba(22, 62, 99, 0.95)), url('images/hero-split.png') center/cover fixed;">
         <div class="container text-center text-white">
           <div class="status-badge-premium mb-32"><span class="status-dot-pulse"></span> INSCRIÇÕES ABERTAS PARA O GRUPO</div>
           <h2 class="urgency-title mb-32">Posições limitadas <br> <span class="text-teal">disponíveis.</span></h2>
@@ -143,22 +130,6 @@
             </div>
           </div>
           <a href="funil-conversao.html" class="btn btn--primary btn--lg mb-24">Reservar Minha Posição <i data-lucide="arrow-right" class="ml-8"></i></a>
-        </div>
-      </section>
-
-      <!-- SEÇÃO GARANTIA DE UPGRADE (Restaurada) -->
-      <section class="section-padding bg-white" id="upgrade">
-        <div class="container">
-          <div class="upgrade-info">
-            <div class="badge-upgrade-inline">Diferencial Exclusivo</div>
-            <div class="upgrade-text-wrap">
-              <i data-lucide="zap" class="upgrade-icon"></i>
-              <div>
-                <h3 class="duration-title mb-16" style="font-size: 1.5rem;">Garantia de Upgrade</h3>
-                <p>Ao finalizar seu plano de 24 meses, você tem prioridade absoluta para migrar para o próximo modelo de iPhone sem burocracia, mantendo sua posição na lista de entregas da WEKOTA.</p>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
 
@@ -193,88 +164,9 @@
         </div>
       </section>
 
-      <!-- SEÇÃO SEGURANÇA & JURISDIÇÃO (Restaurada) -->
-      <section class="section-padding bg-navy">
-        <div class="container">
-          <div class="safety-grid">
-            <div class="text-center mb-60">
-              <h2 class="section-title text-white">Sua segurança em primeiro lugar</h2>
-              <p class="section-desc text-white-60 mx-auto">Operamos dentro das mais rigorosas normas de proteção ao consumidor e transparência contratual na Europa.</p>
-            </div>
-            <div class="safety-bullets">
-              <div class="safety-item"><i data-lucide="shield" class="safety-icon"></i><div><h4>Contratos Registados</h4><p>Cada adesão é formalizada com um contrato juridicamente vinculativo.</p></div></div>
-              <div class="safety-item"><i data-lucide="globe" class="safety-icon"></i><div><h4>Jurisdição Europeia</h4><p>Toda a operação é regida pelas leis comerciais da União Europeia.</p></div></div>
-              <div class="safety-item"><i data-lucide="check-circle" class="safety-icon"></i><div><h4>Transparência de Ordem</h4><p>A ordem de entrega é auditável e segue estritamente o contrato.</p></div></div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- SEÇÃO DE MÉTRICAS & PROVA SOCIAL (Restaurada) -->
-      <section class="section-padding bg-white">
-        <div class="container">
-          <div class="metrics-grid">
-            <div class="metric-item-premium"><span class="metric-value">12</span><span class="metric-label">Posições p/ Grupo</span></div>
-            <div class="metric-item-premium"><span class="metric-value">0%</span><span class="metric-label">Taxa de Juros</span></div>
-            <div class="metric-item-premium"><span class="metric-value">100%</span><span class="metric-label">Garantia Contratual</span></div>
-          </div>
-
-          <div class="text-center mb-60">
-            <h2 class="section-title">O que dizem nossos membros</h2>
-          </div>
-          <div class="carousel-container-testimonials">
-            <div class="testimonial-track" id="testimonial-track">
-              <div class="testimonial-slide">
-                <div class="testimonial-card-premium">
-                  <div class="rating-stars"><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i></div>
-                  <p class="testimonial-text">"A transparência do processo me surpreendeu. Recebi meu iPhone exatamente no mês previsto no contrato europeu."</p>
-                  <div class="testimonial-author">
-                    <div class="author-avatar">RD</div>
-                    <div class="author-info"><h4>Ricardo D.</h4><p>Lisboa, PT</p></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- FORMULÁRIO DE LEAD FINAL (Restaurado) -->
-      <section class="section-padding bg-white" id="cta-final">
-        <div class="container text-center">
-          <span class="escasset-badge">ÚLTIMAS POSIÇÕES DISPONÍVEIS</span>
-          <h2 class="section-title mb-48">Pronto para garantir seu <br><span class="text-teal">iPhone 17 Pro Max?</span></h2>
-          <div class="form-card-premium">
-            <form class="form-grid">
-              <input type="text" placeholder="Seu Nome" class="form-input">
-              <input type="email" placeholder="Seu E-mail" class="form-input">
-              <button type="submit" class="btn btn--primary">Quero Participar</button>
-            </form>
-            <p class="counter-discreet"><i data-lucide="users" class="icon-sm"></i> 152 pessoas entraram na lista esta semana</p>
-          </div>
-        </div>
-      </section>
-
-      <!-- SEÇÃO FAQ (Restaurada) -->
-      <section class="section-padding bg-light" id="faq">
-        <div class="container">
-          <div class="text-center mb-60"><h2 class="section-title">Perguntas Frequentes</h2></div>
-          <div class="faq-wrapper">
-            <div class="faq-item">
-              <button class="faq-question">Como funciona a ordem de entrega? <i data-lucide="chevron-down" class="faq-icon"></i></button>
-              <div class="faq-answer"><p>A ordem é definida no momento da assinatura do contrato coletivo, seguindo critérios objetivos de adesão ao grupo.</p></div>
-            </div>
-            <div class="faq-item">
-              <button class="faq-question">É um financiamento bancário? <i data-lucide="chevron-down" class="faq-icon"></i></button>
-              <div class="faq-answer"><p>Não. É um modelo de aquisição coletiva direta, sem juros bancários e sem necessidade de aprovação de crédito tradicional.</p></div>
-            </div>
-          </div>
-        </div>
-      </section>
-
       <footer class="footer bg-navy">
         <div class="container footer__grid">
-          <div class="footer__col"><a href="#" class="logo mb-24"><img src="/images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official brightness-invert"></a><p class="footer__desc">Plataforma europeia estruturada de aquisição coletiva.</p></div>
+          <div class="footer__col"><a href="#" class="logo mb-24"><img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official brightness-invert"></a><p class="footer__desc">Plataforma europeia estruturada de aquisição coletiva.</p></div>
           <div class="footer__col"><h4 class="footer__title">Links</h4><ul class="footer__links"><li><a href="#como-funciona">Como funciona</a></li><li><a href="mailto:contato@wekota.eu">Contato</a></li></ul></div>
           <div class="footer__col"><h4 class="footer__title">Legal</h4><ul class="footer__links"><li><a href="politica-privacidade.html">Política de Privacidade</a></li><li><a href="termos-condicoes.html">Termos e Condições</a></li></ul><p class="footer__copyright">© 2026 WEKOTA. Todos os direitos reservados.</p></div>
         </div>
@@ -282,24 +174,10 @@
     </main>
   </div>
 
-  <!-- WHATSAPP FLOAT (Restaurado) -->
-  <a href="https://wa.me/351912345678" class="wa-float-official" target="_blank">
-    <div class="wa-icon-official"><i data-lucide="message-circle"></i></div>
-    <span class="wa-text-official">Falar com Consultor</span>
-  </a>
-
-  <script src="/main.js"></script>
+  <script src="main.js"></script>
   <script>
     // Inicialização manual dos scripts da home após o carregamento inicial
     if (window.lucide) window.lucide.createIcons();
-    
-    // FAQ Logic
-    document.querySelectorAll('.faq-question').forEach(button => {
-      button.addEventListener('click', () => {
-        const item = button.parentElement;
-        item.classList.toggle('active');
-      });
-    });
     
     // Countdown
     function startCountdown() {
