--- a/admin.html
+++ b/admin.html
@@ -21,8 +21,37 @@
 </head>
 <body>
     <div id="app" class="min-h-screen relative">
+        <!-- Login Screen -->
+        <div id="login-screen" class="fixed inset-0 z-[100] bg-slate-900 flex items-center justify-center p-4">
+            <div class="glass max-w-md w-full p-8 rounded-2xl shadow-2xl border border-white/10">
+                <div class="text-center mb-8">
+                    <img src="images/logo-oficial.png" alt="WEKOTA" class="h-12 mx-auto mb-4 brightness-0 invert">
+                    <h1 class="text-2xl font-bold text-white">Painel Administrativo</h1>
+                    <p class="text-slate-400 text-sm mt-2">Introduza as suas credenciais para aceder</p>
+                </div>
+                
+                <form id="login-form" class="space-y-4">
+                    <div>
+                        <label class="block text-xs font-bold text-slate-500 uppercase tracking-widest mb-2">E-mail</label>
+                        <input type="email" id="login-email" required class="w-full bg-slate-800 border border-slate-700 rounded-xl px-4 py-3 text-white outline-none focus:border-teal-500 transition-colors" placeholder="admin@wekota.eu">
+                    </div>
+                    <div>
+                        <label class="block text-xs font-bold text-slate-500 uppercase tracking-widest mb-2">Senha</label>
+                        <input type="password" id="login-password" required class="w-full bg-slate-800 border border-slate-700 rounded-xl px-4 py-3 text-white outline-none focus:border-teal-500 transition-colors" placeholder="••••••••">
+                    </div>
+                    <div id="login-error" class="hidden text-red-400 text-xs font-medium bg-red-400/10 p-3 rounded-lg border border-red-400/20">
+                        Credenciais inválidas. Tente novamente.
+                    </div>
+                    <button type="submit" id="login-submit-btn" class="w-full bg-teal-500 hover:bg-teal-400 text-slate-900 font-bold py-3 rounded-xl transition-all shadow-lg shadow-teal-500/20 flex items-center justify-center gap-2 group">
+                        <span>Entrar no Dashboard</span>
+                        <i data-lucide="arrow-right" class="w-4 h-4 group-hover:translate-x-1 transition-transform"></i>
+                    </button>
+                </form>
+            </div>
+        </div>
+
         <!-- Dashboard Content -->
-        <div id="admin-content" class="pb-20">
+        <div id="admin-content" class="pb-20 hidden">
             <!-- Navbar -->
             <nav class="glass border-b border-white/10 sticky top-0 z-40">
                 <div class="container mx-auto px-6 h-16 flex justify-between items-center">
